--- a/Cina219test/Cina219test.csproj
+++ b/Cina219test/Cina219test.csproj
@@ -81,7 +81,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\GitHub\HomeAutomationTester\Centralite.CurrentSensor\Centralite.CurrentSensor.csproj">
+    <ProjectReference Include="..\internal-common\Centralite.CurrentSensor\Centralite.CurrentSensor.csproj">
       <Project>{affbfb9e-8cb7-4ead-804d-e863f306926b}</Project>
       <Name>Centralite.CurrentSensor</Name>
     </ProjectReference>
